--- a/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
@@ -193,9 +193,12 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm-9"></div>
+      <div class="col-sm-7"></div>
       <div class="col-sm-2 well hoverwell button" (click)="print()">
         Ausdrucken
+      </div>
+      <div class="col-sm-2 well hoverwell button" (click)="printWRs()">
+        Wertungsrichter Einsätze
       </div>
     </div>
   </div>
