Korrektur TiTu Rangliste

--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/header/ranglisten-header.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/rechnungsbuero/header/ranglisten-header.component.html
@@ -10,7 +10,7 @@
   <div class="col-base col-1">Sprung 1</div>
   <div class="col-base col-1">Sprung 2</div>
   <div class="col-base col-1">Zählbar</div>
-  <div *ngIf="!isTi" class="col-base col-1">Barren</div>
+  <div *ngIf="isTu" class="col-base col-1">Barren</div>
   <div class="col-base col-1">Total</div>
   <div class="col-base col-1 right">Rang</div>
   <div class="col-base col-2">Auszeichnung</div>
