--- a/anmeldetool-web/src/main/web/src/app/app.component.html
+++ b/anmeldetool-web/src/main/web/src/app/app.component.html
@@ -8,6 +8,13 @@
   <div *ngIf="!dialogOpen && appBlocked" class="overlay">
     <h1 class="center">
       Das AnmeldeTool ist gesperrt !!! Im Moment findet ein Wettkampf statt.
+      <div *ngIf="anlass && administrator" class="col-sm-4">
+        <mat-checkbox
+          [(ngModel)]="anlass.toolSperren"
+          (ngModelChange)="toolSperrenClicked($event)"
+          >Tool sperren
+        </mat-checkbox>
+      </div>
     </h1>
   </div>
 </ng-template>
