--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/erfassen.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/erfassen.component.html
@@ -13,13 +13,14 @@
     </div>
     <div class="col-10">
       <div class="row">
+        <!--             (keyup.enter)="searchLaufliste()" -->
         <mat-form-field appearance="fill">
           <mat-label>Lauflisten Schlüssel</mat-label>
           <input
             matInput
             type="text"
             [(ngModel)]="search"
-            (keyup.enter)="searchLaufliste()"
+            (keyup)="searchLaufliste()"
           />
           <button
             *ngIf="search"
