--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/row/erfassen-row.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/row/erfassen-row.component.html
@@ -43,6 +43,7 @@
             eintrag.note_1 | number: "1.2-2"
           }}</span>
           <input
+            #control1
             matInput
             [formControl]="note_1_Cntr"
             type="text"
@@ -69,6 +70,7 @@
         </div>
         <div class="col-1 data centered">
           <input
+            #control1
             matInput
             [formControl]="note_1_Cntr"
             type="text"
