Fix for BR2 WR, Fix for Ummelden

--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -180,6 +180,7 @@
                     [isAllWertungsrichterList]="true"
                     [wertungsrichterUser]="wr"
                     [anlass]="anlass"
+                    [useBrevet2]="false"
                   ></app-wertungsrichter-chip>
                 </div>
               </div>
@@ -200,6 +201,7 @@
                     [isAllWertungsrichterList]="false"
                     [wertungsrichterUser]="wr"
                     [anlass]="anlass"
+                    [useBrevet2]="useBrevet2"
                     (wertungsrichterUserChange)="
                       wertungsrichterUserChange($event)
                     "
