Error Brevet 2 bei Brevet 1 angezeigt

--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -8,8 +8,8 @@
           class="nav-link"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
-          >Alle Anlässe<span class="sr-only">(current)</span></a
-        >
+          >Alle Anlässe<span class="sr-only"></span
+        ></a>
       </li>
     </ul>
     <div class="navbar-header navbar-right">
