--- a/anmeldetool-web/src/main/web/src/app/events/event-admin/event-admin.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-admin/event-admin.component.html
@@ -83,6 +83,25 @@
         </div>
         <div class="row">
           <div class="col-3">
+            <h2>Teilnehmer Import von STV Contest</h2>
+          </div>
+          <div class="col-sm-2"></div>
+          <div class="col-sm-2">
+            <button
+              mat-button
+              color="primary"
+              #tooltip="matTooltip"
+              matTooltip="Teilnehmer importieren"
+              matTooltipPosition="below"
+              matTooltipHideDelay="500"
+              (click)="importContestTeilnehmer()"
+            >
+              Importieren
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
             <h2>Wertungsrichter Export</h2>
           </div>
           <div class="col-sm-2">
