--- a/anmeldetool-web/src/main/web/src/app/events/event-list/event-list.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-list/event-list.component.html
@@ -1,9 +1,10 @@
 <h1>ZTV Anlässe</h1>
 <hr />
-<!--div class="row" *ngIf="anlaesse$ | async; else loading"-->
-<div class="row">
-  <div *ngFor="let anlass of anlaesse" class="col-md-auto">
-    <app-event-thumbnail #thumbnail [anlass]="anlass"></app-event-thumbnail>
+<div class="row" *ngIf="anlaesse$ | async; else loading">
+  <div *ngIf="showEvents" class="row">
+    <div *ngFor="let anlass of anlaesse" class="col-md-auto">
+      <app-event-thumbnail #thumbnail [anlass]="anlass"></app-event-thumbnail>
+    </div>
   </div>
 </div>
 
