--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -17,7 +17,8 @@
       </div>
     </div>
   </div>
-
+  <app-anlass-detail [anlass]="anlass"></app-anlass-detail>
+  <!--  neu app-anlass-detail
   <div class="row">
     <div class="col-sm-3">
       <span *ngIf="anlass.startDatum === anlass.endDatum">am</span>
@@ -45,8 +46,11 @@
     <div class="col-sm-3">Organisator: {{ anlass.organisator }}</div>
     <div class="col-sm-3">IBAN: {{ anlass.iban }}</div>
   </div>
+  -->
+
   <hr />
-  <!--  (click)="vereinStartedClicked($event)"        -->
+  <app-anlass-statistik [anlass]="anlass"></app-anlass-statistik>
+  <!-- neu Anlass Statistik
   <div class="row">
     <div class="col-12" *ngIf="orgAnlassLink">
       <mat-checkbox
@@ -163,7 +167,9 @@
       K7: {{ k7.length }}
     </div>
   </div>
+-->
 
+  <!--
   <div class="row">
     <h3 class="padding">Wertungsrichter</h3>
   </div>
@@ -360,7 +366,7 @@
     [viewOnly]="isViewOnly()"
     (verlaengertChange)="verlaengertChange($event)"
   ></app-events-dates>
-</div>
+--></div>
 
 <ng-template #loading>
   <div class="center">
