--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.css
@@ -6,3 +6,9 @@ body {
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
 }
+.ztvAnlassHeaderLabel {
+  width: 30px;
+  transform: rotate(90deg);
+  margin-top: 50px;
+  display: inline-block;
+}
