--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -361,12 +361,13 @@
       </div>
     </div>
   </div>
+-->
   <app-events-dates
     [anlass]="anlass"
     [viewOnly]="isViewOnly()"
     (verlaengertChange)="verlaengertChange($event)"
   ></app-events-dates>
---></div>
+</div>
 
 <ng-template #loading>
   <div class="center">
