Kategorie selection within Grid

--- a/anmeldetool-web/src/main/web/src/app/shared/component/user/user.component.html
+++ b/anmeldetool-web/src/main/web/src/app/shared/component/user/user.component.html
@@ -12,7 +12,7 @@
         Pflichtfeld
       </mat-error>
       <mat-error *ngIf="form.controls.benutzernameControl.invalid">
-        ungültiger Benutzername Beispiel: hans.muster@turnverein.ch
+        ungültiger Benutzername Beispiel: hans.muster&#64;turnverein.ch
       </mat-error>
 
       <mat-hint>Gib eine eMail als Benutzername ein</mat-hint>
