--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.html
@@ -1,5 +1,14 @@
-<!-- Button to clear selection -->
-<button (click)="clearSelection()">Clear Selection</button>
+<h3>Anzeige Filtern</h3>
+<mat-button-toggle-group
+  name="geschlecht"
+  aria-label="Geschlecht"
+  multiple
+  [value]="selectedState"
+  (change)="onChange($event)"
+>
+  <mat-button-toggle value="Turnerin">Turnerinnen</mat-button-toggle>
+  <mat-button-toggle value="Turner">Turner</mat-button-toggle>
+</mat-button-toggle-group>
 <!-- AG Grid Angular Component -->
 <ag-grid-angular
   style="width: 100%; height: 80%"
@@ -15,4 +24,5 @@
   (gridReady)="onGridReady($event)"
   (cellClicked)="onCellClicked($event)"
 ></ag-grid-angular>
-<h3>End Grid</h3>
+<!-- Button to clear selection -->
+<button (click)="clearSelection()">Clear Selection</button>
