--- a/anmeldetool-web/src/main/web/src/app/events/event-start-list/event-start-list.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-start-list/event-start-list.component.html
@@ -5,6 +5,12 @@
         <h1>Startliste</h1>
       </div>
     </div>
+    <div class="row red">
+      <h2>
+        die Anlage und das Startgerät können bis ca. 15 Minuten vor dem
+        Wettkampfstart noch ändern
+      </h2>
+    </div>
     <div class="row">
       <div class="col-sm-10">
         <h1>{{ titel }}</h1>
@@ -20,7 +26,7 @@
         <span *ngIf="anlass.startDatum !== anlass.endDatum">von</span>:
       </div>
       <div class="col-sm-2 text-bold">
-        {{ anlass.startDatum | date: "EEE, d MMMM , y":"GMT+1":"DE-CH" }}
+        {{ anlass.startDatum | date : "EEE, d MMMM , y" : "GMT+1" : "DE-CH" }}
       </div>
       <div class="col-sm-2" *ngIf="anlass.startDatum !== anlass.endDatum">
         bis:
@@ -29,7 +35,7 @@
         class="col-sm text-bold"
         *ngIf="anlass.startDatum !== anlass.endDatum"
       >
-        {{ anlass.endDatum | date: "EEE, d MMMM , y":"GMT+1":"DE-CH" }}
+        {{ anlass.endDatum | date : "EEE, d MMMM , y" : "GMT+1" : "DE-CH" }}
         >
       </div>
     </div>
