--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.html
@@ -1,22 +1,47 @@
-<h3>Anzeige Filtern</h3>
-<!--
-  (change)="onChange($event)"
--->
-<mat-button-toggle-group
-  #group="matButtonToggleGroup"
-  name="geschlecht"
-  aria-label="Geschlecht"
-  [value]="selectedState"
-  (click)="onClick(group.value)"
-  localeText="localeTextDE"
->
-  <mat-button-toggle value="Turnerin">Turnerinnen</mat-button-toggle>
-  <mat-button-toggle value="Turner">Turner</mat-button-toggle>
-</mat-button-toggle-group>
+<div class="banner">
+  <mat-button-toggle-group
+    #group="matButtonToggleGroup"
+    name="geschlecht"
+    aria-label="Geschlecht"
+    [value]="selectedState"
+    (click)="onClick(group.value)"
+    localeText="localeTextDE"
+  >
+    <mat-button-toggle value="Turnerin">Turnerinnen</mat-button-toggle>
+    <mat-button-toggle value="Turner">Turner</mat-button-toggle>
+  </mat-button-toggle-group>
+  <span class="abstand">
+    <mat-form-field>
+      <mat-label>Jahr</mat-label>
+      <mat-select
+        [value]="selectedJahr"
+        (selectionChange)="jahrSelektiert($event)"
+      >
+        <mat-option>None</mat-option>
+        <mat-option
+          *ngFor="let jahr of getJahresListe() | async "
+          [value]="jahr"
+        >
+          {{jahr}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </span>
+  <span class="abstand">
+    <mat-checkbox
+      class="checkbox"
+      [(ngModel)]="showOldAnlaesse"
+      (change)="showOldChanged($event.checked)"
+      >vergangene Wettkämpfe anzeigen</mat-checkbox
+    >
+  </span>
+  <span class="abstand">
+    <mat-checkbox class="checkbox">gelöschte Teilnehmer anzeigen</mat-checkbox>
+  </span>
+</div>
 <div>
   <button
     mat-fab
-    [disabled]="disAllowAdd()"
     color="primary"
     #tooltip="matTooltip"
     matTooltip="Neue TurnerIn anlegen"
@@ -26,45 +51,21 @@
   >
     Neu
   </button>
-  <!--button Kein Save
-    [disabled]="disAllowSave"
-    class="mat-fab2"
-    mat-fab
-    color="primary"
-    #tooltip="matTooltip"
-    matTooltip="Änderungen speichern"
-    matTooltipPosition="below"
-    matTooltipHideDelay="500"
-    (click)="saveTeilnehmer($event)"
-  >
-    Speichern
-  </button>
-  <button
-    [disabled]="disAllowCancel"
-    class="mat-fab3"
-    mat-fab
-    color="primary"
-    #tooltip="matTooltip"
-    matTooltip="Änderungen verwerfen"
-    matTooltipPosition="below"
-    matTooltipHideDelay="500"
-    (click)="cancel($event)"
-  >
-    Verwerfen
-  </button-->
 </div>
 <!-- AG Grid Angular Component -->
 <ag-grid-angular
   style="width: 100%; height: 80%"
   class="ag-theme-alpine"
   [columnDefs]="columnDefs"
+  [getRowId]="getRowId"
   [defaultColDef]="defaultColDef"
   [context]="context"
-  [rowData]="rowData"
+  [rowData]="data"
   [rowSelection]="'multiple'"
   [animateRows]="true"
   [pagination]="true"
   [paginationAutoPageSize]="true"
   (gridReady)="onGridReady($event)"
-  (cellClicked)="onCellClicked($event)"
+  [readOnlyEdit]="false"
 ></ag-grid-angular>
+<!-- rowData$ | async -->
